--- a/my-vue-todo-app/index.html
+++ b/my-vue-todo-app/index.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Todo App</title>
+  <title>To-do App</title>
 </head>
 
 <body>
